--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,7 @@ body {
 .logo h1 {
     margin: 0;
     font-size: 24px;
+    text-decoration: none;
 }
 
 .navigation ul {
@@ -103,7 +104,8 @@ footer {
 
 .products h1{
     text-align: center;
-    font-size: 50px;
+    font-size: 30px;
+    color: var(--dark-coral);
 }
 
 .product-cont {
@@ -121,8 +123,9 @@ footer {
     text-align: center;
     margin: 0px 5px 10px 5px;
   }
-.product-cont a {
+a {
     text-decoration: none;
+    color: var(--black-color);
 }
 .product-image {
     width: 100%;
@@ -138,4 +141,87 @@ footer {
     color: var(--dark-coral);
     font-size: 1.2em;
 }
-  
+
+.categories {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.category-card {
+    width: 48%;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.category-image {
+    width: 100%;
+    padding-top: 200px; /* Aspect ratio 1:1 */
+    position: relative;
+}
+
+.category-card img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    object-fit: cover;
+    filter: brightness(70%); /* Darken the image */
+}
+
+.category-name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--light-pink-color);
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+}
+
+
+footer {
+    background-color: var(--light-pink-color);
+    color: var(--white-color);
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 15px;
+}
+.footer-container {
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+.footer-container div {
+    margin: 10px;
+}
+
+.varios p, .social-media p {
+    margin: 10px 0;
+}
+.social-media i {
+    font-size: 24px; /* tamaño de los íconos */
+}
+.social-media {
+    text-align: center;
+    grid-column: 2;
+}
+.varios {
+    grid-column: 1;
+}
+
+footer a {
+    color: var(--white-color);
+}
+.footer-container p {
+    text-align: center;
+    grid-column: span 2;
+}
