footer, imagenes cat y views como clases

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,21 +43,22 @@
    
     <footer>
         <div class="footer-conteiner">
-            <div class="varios">
-                <p><a href="#">Métodos de pago</a></p>
-                <p><a href="#">Preguntas frecuentes</a></p>
-                <p><a href="#">Politica de devolución</a></p>
-                <p><a href="#">Boton de arrepentimiento</a></p>
+            <div class="footer-column">
+                <div class="varios">
+                    <p><a href="#">Métodos de pago</a></p>
+                    <p><a href="#">Preguntas frecuentes</a></p>
+                    <p><a href="#">Politica de devolución</a></p>
+                    <p><a href="#">Boton de arrepentimiento</a></p>
+                </div>
+                <div class="social-media">
+                    <p>Comunicate con nosotros</p>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                </div>
             </div>
-            <div class="social-media">
-                <p>Comunicate con nosotros</p>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        
-            <p>&copy; 2024 CoquetteSteps. Todos los derechos reservados.</p>
+            <p class="copy">&copy; 2024 CoquetteSteps. Todos los derechos reservados.</p>
         </div>
     </footer>
 
