--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,7 +99,7 @@ footer {
     color: var(--white-color);
     text-align: center;
     padding: 10px 0;
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 .products h1{
@@ -147,6 +147,7 @@ a {
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
+    margin-bottom: 40px;
 }
 
 .category-card {
@@ -159,8 +160,9 @@ a {
 }
 
 .category-image {
-    width: 100%;
-    padding-top: 200px; /* Aspect ratio 1:1 */
+   width: 100%;
+   height: 200px;
+    /*padding-top: 200px; /* Aspect ratio 1:1 */
     position: relative;
 }
 
@@ -184,7 +186,6 @@ a {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
-
 footer {
     background-color: var(--light-pink-color);
     color: var(--white-color);
@@ -192,36 +193,42 @@ footer {
     padding: 10px 0;
     margin-top: 15px;
 }
-.footer-container {
-    display:grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-.footer-container div {
-    margin: 10px;
-}
 
 .varios p, .social-media p {
     margin: 10px 0;
 }
+.social-media p {
+    font-size: 18px;
+}
 .social-media i {
     font-size: 24px; /* tamaño de los íconos */
+    margin-left: 2.5px;
+    margin-right: 2.5px;
 }
-.social-media {
-    text-align: center;
-    grid-column: 2;
-}
-.varios {
-    grid-column: 1;
-}
-
 footer a {
     color: var(--white-color);
 }
-.footer-container p {
+
+.footer-conteiner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer-column {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 800px;
+    margin-bottom: 10px;
+    align-items: center;
+}
+
+.varios, .social-media {
+    flex: 1;
+
+}
+
+.copy {
     text-align: center;
-    grid-column: span 2;
 }
