--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,8 @@
         
     </div>
 
-    {% block product %}
-    {% endblock %}
+    <div class="page-content">
+        {% block product %}
+        {% endblock %}
+    </div>
 {% endblock %}
