--- a/templates/card.html
+++ b/templates/card.html
@@ -1,9 +1,9 @@
 {% load static %}
-<div class="product-card"> <a href="#">
+<div class="product-card"> <a href="{% url 'producto' item.codigo %}">
     <!--
     <img class="product-image" src="{% static 'calzado/' %}{{ category_filter }}/{{ item.tipo_calzado }}/{{ item.codigo }}/{{ item.codigo }}.jpg "  alt="{{ item }}" > 
     -->
-    <img class="product-image" src="{% static 'calzado/' %}{{ item.tipo_calzado.categoria_nom }}/{{ item.tipo_calzado }}/{{ item.codigo }}/{{ item.codigo }}.jpg" alt="{{ item }}" {% if not item.codigo %}onerror="this.onerror=null; this.src='{% static 'calzado/image-not-found.png' %}'"{% endif %}>
+    <img class="product-image" src="{% static 'calzado/' %}{{ item.tipo_calzado.categoria_nom }}/{{ item.tipo_calzado }}/{{ item.codigo }}/{{ item.codigo }}.jpg" alt="{{ item }}" >
 
     <div class="product-title">{{item.nombre}}</div>
     <div class="product-price">${{item.precio}}</div>
