--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,7 +125,7 @@ footer {
     width: 200px;
     text-align: center;
     margin: 0px 5px 10px 5px;
-  }
+}
 
 a {
     text-decoration: none;
@@ -164,8 +164,8 @@ a {
 }
 
 .category-image {
-   width: 100%;
-   height: 200px;
+    width: 100%;
+    height: 200px;
     /*padding-top: 200px; /* Aspect ratio 1:1 */
     position: relative;
 }
@@ -237,7 +237,7 @@ footer a {
     text-align: center;
 }
 
- .page-content {
+.page-content {
     display: flow;
     width: 100%;
 }
@@ -314,4 +314,37 @@ footer a {
     background-color: var(--dark-coral);
     color: var(--beige-color);
     border-color: var(--dark-coral);
+}
+
+/* Ajustes del carrusel */
+.carousel .carousel-item img {
+    max-width: 400px; /* Ancho máximo de las imágenes */
+    max-height: 400px; /* Altura máxima de las imágenes */
+    width: auto; /* Ancho automático para mantener la proporción */
+    height: auto; /* Altura automática para mantener la proporción */
+    display: block; /* Mostrar como bloque */
+    margin: 0 auto; /* Centradas */
+}
+
+/* Ajustes de tamaño para las imágenes del carrusel */
+.carousel .carousel-item img {
+    max-width: 100px; /* Ancho máximo de las imágenes */
+    max-height: 100px; /* Altura máxima de las imágenes */
+    width: auto; /* Ancho automático para mantener la proporción */
+    height: auto; /* Altura automática para mantener la proporción */
+    display: block; /* Mostrar como bloque */
+    margin: 0 auto; /* Centradas horizontalmente */
+}
+
+.carousel-caption {
+    color: #000; /* Texto negro */
+    padding: 10px; /* Relleno interno */
+    border-radius: 5px; /* Bordes redondeados */
+    max-width: 300px; /* Ancho máximo del contenedor del texto */
+    margin: 10px auto; /* Centrado horizontal */
+    text-align: center; /* Texto centrado */
+}
+
+.carousel-caption h5, .carousel-caption p {
+    color: #000; /* Color del texto negro */
 }
