--- a/templates/home_content.html
+++ b/templates/home_content.html
@@ -3,31 +3,54 @@
 {% block title %}Inicio - Coquette Steps{% endblock %}
 
 {% block product %}
-{% load static %}
+    {% load static %}
     <div class="products">
         <h1>Destacados</h1>
-        <div class="product-cont">
-            {% if star_product %}
-                {% for item in star_product %}
-                    {% include 'card.html' %}
-                {% endfor %}
-            {% else %}
-                <p>"Lo sentimos, no hay productos disponibles"</p>
-            {% endif %}
+        <div id="starProductCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                {% if star_product %}
+                    {% for item in star_product %}
+                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                        <img src="{% static 'calzado/' %}{{ item.tipo_calzado.categoria_nom }}/{{ item.tipo_calzado }}/{{ item.codigo }}/{{ item.codigo }}.jpg" class="d-block mx-auto carousel-img" alt="{{ item.nombre }}">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>{{ item.nombre }}</h5>
+                            <p><strong>Precio: </strong>${{ item.precio }}</p>
+                            <p>{{ item.descripcion }}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                {% else %}
+                    <div class="carousel-item active">
+                        <img src="{% static 'path/to/default_image.jpg' %}" class="d-block mx-auto carousel-img" alt="No hay productos">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>No hay productos disponibles</h5>
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+            <a class="carousel-control-prev" href="#starProductCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#starProductCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
+
     <div class="categories">
         {% if category %}
-        <div class="category-card">
-            <div class="category-image">
-                <a href="{% url 'home_filter' 'all' %}">
-                <img src="{% static 'calzado/' %}Calzados.jpg" alt="Todos los calzados" class="category-image">
-                <span class="category-name">Calzados</span>
-                </a>
+            <div class="category-card">
+                <div class="category-image">
+                    <a href="{% url 'home_filter' 'all' %}">
+                        <img src="{% static 'calzado/Calzados.jpg' %}" alt="Todos los calzados" class="category-image">
+                        <span class="category-name">Calzados</span>
+                    </a>
+                </div>
             </div>
-        </div>
-            {% for item in category %}
-                {% include 'cat_card.html' %}
+            {% for cat_item in category %}
+                {% include 'cat_card.html' with item=cat_item %}
             {% endfor %}
         {% endif %}
     </div>
