--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ header {
 .logo h1 {
     margin: 0;
     font-size: 24px;
-    text-decoration: none;
+    font-weight: bold;
 }
 
 .navigation ul {
@@ -59,6 +59,11 @@ header {
     margin: 0 10px;
     text-decoration: none;
     color: var(--black-color)
+}
+
+h1 {
+    font-weight: bold;
+
 }
 
 .hero {
@@ -105,6 +110,10 @@ footer {
     margin-top: 20px;
 }
 
+.products{
+    padding: 10px 0 0;
+}
+
 .products h1{
     text-align: center;
     font-size: 30px;
@@ -116,6 +125,8 @@ footer {
     flex-wrap: wrap; /* Permite que las tarjetas se envuelvan en múltiples líneas */
     justify-content: center;
 }
+
+/* product card */
 
 .product-card {
     display: inline-block;
@@ -131,6 +142,7 @@ a {
     text-decoration: none;
     color: var(--black-color);
 }
+
 .product-image {
     width: 100%;
     border-radius: 5px;
@@ -145,6 +157,9 @@ a {
     color: var(--dark-coral);
     font-size: 1.2em;
 }
+/* fin product card */
+
+/* card categoria */
 
 .categories {
     display: flex;
@@ -189,6 +204,9 @@ a {
     font-weight: bold;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
+/* fin card categoria */
+
+/* footer */
 
 footer {
     background-color: var(--light-pink-color);
@@ -236,12 +254,14 @@ footer a {
 .copy {
     text-align: center;
 }
+/* fin footer */
 
 .page-content {
     display: flow;
     width: 100%;
 }
 
+/* product card one */
 #product {
     display: flex;
     justify-content: center;
@@ -315,6 +335,7 @@ footer a {
     color: var(--beige-color);
     border-color: var(--dark-coral);
 }
+/* fin card producto */
 
 /* Ajustes del carrusel */
 .carousel .carousel-item img {
@@ -349,6 +370,21 @@ footer a {
     color: #000; /* Color del texto negro */
 }
 
+.carousel-inner {
+    display: inline;
+    justify-content: center;
+    align-items: center;
+    height: max-content;
+}
+.carousel-item {
+    justify-content: center;
+    align-items: center;
+}
+
+p, div, a :hover{
+    text-decoration: none;
+
+}
 
 .auth-form {}
 .login-title {}
