--- a/templates/register.html
+++ b/templates/register.html
@@ -58,7 +58,7 @@
     <div class="tengo-cuenta">
         <p>
             ¿Ya te registraste?
-            <a class="text-tengo-cuenta" href="{% url 'register' %}"> ¡Inicia Sesion!</a>
+            <a class="text-tengo-cuenta" href="{% url 'login' %}"> ¡Inicia Sesion!</a>
         </p>
     </div>
     {% for message in messages %}
