--- a/static/css/style.css
+++ b/static/css/style.css
@@ -386,15 +386,65 @@ p, div, a :hover{
 
 }
 
-.auth-form {}
-.login-title {}
-.login-form {}
-.form-control {}
-.login-button {}
-.crear-cuenta, .tengo-cuenta {}
+.auth-form {
+    max-width: 600px; /* Ancho máximo del formulario */
+    margin: 15px auto 0; /* Centrar el formulario horizontalmente */
+   height: 80%; 
+   
+}
+.login-title {
+    text-align: center;
+    font-weight: bold;
+    font-size: 28px;
+    color: var(--dark-coral);
+    
+}
+.login-form {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+}
+.form-control {
+    width: 100%; /* Ancho completo del campo de entrada */
+    padding: 10px; /* Espaciado interior */
+    font-size: 16px; /* Tamaño de fuente */
+    border: 1px solid #ccc; /* Borde del campo de entrada */
+    border-radius: 4px; 
+}
+
+.form-control {
+    margin-bottom: 15px;
+    margin-left: 5px;
+}
+.login-button {
+    width: 100%; /* Ancho completo del botón */
+    padding: 6px; /* Espaciado interior */
+    font-size: 16px; /* Tamaño de fuente */
+    border-radius: 4px; /* Bordes redondeados */
+    background-color: var(--dark-coral);
+    color: var(--white-color);
+}
+.crear-cuenta, .tengo-cuenta {
+    text-align: center; /* Centrar el texto */
+    margin-top: 15px; /* Espacio superior */
+}
 .text-crear-cuenta, .text-tengo-cuenta {}
-.error-cont {}
-.error-message {}
-.btn .login-button {}
+.error-cont {
+    margin-top: 15px; /* Espacio superior para mensajes de error */
+}
+.error-message {
+    color: red; /* Color de texto rojo para mensajes de error */
+
+}
+.btn .login-button {
+    width: 100%; /* Ancho completo del botón */
+    padding: 10px; /* Espaciado interior */
+    font-size: 16px; /* Tamaño de fuente */
+    border-radius: 4px; /* Bordes redondeados */
+    background-color: var(--dark-coral);
+    color: var(--white-color);
+}
 .logout-cancel {}
 
