--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>{% block title %}Mi Sitio Web{% endblock %}</title>
     {% load static %}
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    {% block ccs-add %}{% endblock %}
+    
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     
@@ -18,7 +17,7 @@
         </div>
         <div class="header-main">
             <div class="logo">
-                <h1><a href="{% url 'home' %}">COQUETTESTEPS</a></h1>
+                <h1><a href="{% url 'home' %}">COQUETTESTEPS 🎀​</a></h1>
             </div>
             <nav class="navigation">
                 {% block nav %}
@@ -65,6 +64,7 @@
                     <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
             </div>
+            <p class="bow">🎀​</p>
             <p class="copy">&copy; 2024 CoquetteSteps. Todos los derechos reservados.</p>
         </div>
     </footer>
