--- a/templates/home_content.html
+++ b/templates/home_content.html
@@ -1,6 +1,10 @@
 {% extends 'home.html' %}
 
 {% block title %}Inicio - Coquette Steps{% endblock %}
+{% block ccs-add %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+{% endblock %}
 
 {% block product %}
     {% load static %}
