--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Mi Sitio Web{% endblock %}</title>
+    <title>{% block title %}🎀​{% endblock %}</title>
     {% load static %}
     {% block ccs-add %}{% endblock %}
     
