--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 
 {% extends 'base.html' %}
 
-{% block title %}Coquette Steps{% endblock %}
+{% block title %}Coquette🎀​Steps{% endblock %}
 
 {% block content %}
 {% load static %}
