--- a/templates/product.html
+++ b/templates/product.html
@@ -1,6 +1,6 @@
 {% extends 'home.html' %}
 
-{% block title %}{{category_filter}} - Coquette Steps{% endblock %}
+{% block title %}{{category_filter}} - Coquette🎀​Steps{% endblock %}
 
 {% block product %}
 {% load static %}
