--- a/templates/product_one.html
+++ b/templates/product_one.html
@@ -1,6 +1,6 @@
 {% extends 'home.html' %}
 
-{% block title %}{{product.nombre}} - Coquette Steps{% endblock %}
+{% block title %}{{product.nombre}} - Coquette🎀​Steps{% endblock %}
 
 {% block product %}
 
