--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,6 @@
     --light-pink-color: #e099ad;
     --dark-coral: #ce5e7e ;
     --black-color : #000;
-    --error-red-color : rgb(220, 89, 89);
 }
 
 
@@ -64,21 +63,7 @@ header {
 
 h1 {
     font-weight: bold;
-    text-decoration: none;
-}
 
-h1 :hover{
-    text-decoration: none;
-    color: var(--black-color);
-}
-
-div :hover {
-    text-decoration: none;
-}
-
-.footer-conteiner a :hover, .footer-conteiner p :hover,  .footer-conteiner i :hover{
-    text-decoration: none;
-    color: var(--white-color);
 }
 
 .hero {
@@ -123,10 +108,6 @@ footer {
     text-align: center;
     padding: 10px 0;
     margin-top: 20px;
-}
-.bow {
-    margin: 0;
-    padding: 0;
 }
 
 .products{
@@ -377,7 +358,7 @@ footer a {
 }
 
 .carousel-caption {
-    color: var(--black-color); /* Texto negro */
+    color: #000; /* Texto negro */
     padding: 10px; /* Relleno interno */
     border-radius: 5px; /* Bordes redondeados */
     max-width: 300px; /* Ancho máximo del contenedor del texto */
@@ -386,7 +367,7 @@ footer a {
 }
 
 .carousel-caption h5, .carousel-caption p {
-    color: var(--black-color); /* Color del texto negro */
+    color: #000; /* Color del texto negro */
 }
 
 .carousel-inner {
