Agregado de favicon y actualización del admin

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     {% block ccs-add %}{% endblock %}
     
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'calzado/favicon.png' %}">
+
 </head>
 <body>
     <header>
