--- a/templates/home_content.html
+++ b/templates/home_content.html
@@ -2,8 +2,10 @@
 
 {% block title %}Inicio - Coquette🎀​Steps{% endblock %}
 {% block ccs-add %}
+{% load static %}
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}".css">
 {% endblock %}
 
 {% block product %}
