--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Registreseo - 👠​CS👡  {% endblock %}
+{% block title %}Registro - 👠​CS👡  {% endblock %}
 {% block content %}
 {% load static %}
 <div  class="auth-form">
