Carrito en funcionamiento

--- a/templates/product_one.html
+++ b/templates/product_one.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="cont-add-cart">
-            <button class="add-cart" id="add-to-cart">Añadir al 🛒</button>
+            <button class="add-cart" id="add-to-cart" data-product-id="{{ product.id }}">Añadir al 🛒</button>
         </div>
     </div>
 </div>
@@ -38,3 +38,4 @@
 </div>
 {% endfor %}
 {% endblock %}
+
