--- a/templates/product_card.html
+++ b/templates/product_card.html
@@ -1,15 +1,13 @@
-{% article product %}
-
 {% load static %}
 <article class="product" id="product">
 <div class="product-one">
     
-    <img class="product-image" src="{% static 'calzado/' %}{{ product.tipo_calzado.categoria_nom }}/{{ product.tipo_calzado }}/{{ product.codigo }}/{{ product.codigo }}.jpg" alt="{{ product }}" >
+    <img class="product-image" src="{% static 'calzado/' %}{{ product.calzado.tipo_calzado.categoria_nom }}/{{ product.calzado.tipo_calzado }}/{{ product.calzado.codigo }}/{{ product.calzado.codigo }}.jpg" alt="{{ product }}" >
     <div class="detail-cont">
         <div class="detail">
-            <div class="product-title"><h1>{{product.nombre}}</h1></div>
+            <div class="product-title"><h4>{{product.calzado.nombre}}</h4></div>
             
-            <div class="product-price">${{product.precio}}</div>
+            <div class="product-price">${{product.calzado.precio}}</div>
         </div>
         <div>
             <div class="product-size">Talle: {{product.talle}}</div>
@@ -18,4 +16,3 @@
     </div>
 </div>
 </article>
-{% endblock %}
